# perf-monitor-rs

./: CHANGELOG.md  CHECKLIST.md  Cargo.toml  DAY5_COMPLETE.md  DAY6_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  QUICK_STATUS.md  README.md  SECURITY.md  WEEK1_COMPLETE.md  WEEK1_WRAPUP.md  example-config.toml
benches/: collection_benchmark.rs
configs/production/: accounts-alms-config.toml  mese-config.toml  moto-config.toml
deploy/: Dockerfile
deploy/docker-compose/: .env.example  README.md
deploy/docker-compose/grafana/provisioning/dashboards/: dashboard-provider.yml  monitor-rs-dashboard.json
deploy/kubernetes/: README.md
deploy/kubernetes/helm/: Chart.yaml  values.yaml
deploy/kubernetes/helm/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  daemonset.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
deploy/lxc/: README.md  monitor-rs.conf  setup.sh
deploy/templates/: monitor-rs-alerts.yml
docs/: INDEX.md  README.md  REVISED_PLAN.md  summary.md
docs/guides/: APM.md  QUICKSTART.md
docs/implementation/: COMPLETED.md  COMPLETION_SUMMARY.md
docs/week1/: COMPLETED.md  OVERVIEW.md  REMAINING.md
docs/week1/_archive/: DAY3_PROGRESS.md  PROGRESS.md  QUICKSTART.md  SESSION_SUMMARY.md  SUMMARY.md
examples/: grafana-dashboard.json  prometheus.yml
examples/docker-compose/: docker-compose.yml  prometheus.yml
examples/docker-compose/grafana/provisioning/datasources/: prometheus.yml
examples/infrastructure/: README.md  momoep-config.toml  solarhub-config.toml
src/: error.rs  lib.rs  main.rs
src/collectors/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  process.rs  snapshot.rs
src/collectors/services/: celery.rs  mod.rs  mongodb.rs  mysql.rs  postgresql.rs  puma.rs  rabbitmq.rs  redis.rs  sidekiq.rs  sphinx.rs
src/config/: defaults.rs  mod.rs
src/export/: mod.rs  prometheus.rs  server.rs
src/processing/: mod.rs
src/ui/: app.rs  mod.rs
src/ui/layouts/: mod.rs
src/ui/widgets/: mod.rs
