[package]
name = "monitor-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Erick Gitangu"]
description = "Real-time system monitor with Prometheus integration"
license = "MIT OR Apache-2.0"
keywords = ["monitoring", "tui", "system", "prometheus", "performance"]
categories = ["command-line-utilities", "development-tools::profiling"]

[dependencies]
# TUI Framework
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }

# System Metrics
sysinfo = { version = "0.30", default-features = false, features = ["multithread"] }
procfs = { version = "0.16", optional = true }

# Async Runtime (only for HTTP server and network I/O)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "net"], optional = true }

# Database Clients
mysql_async = { version = "0.34", optional = true }
tokio-postgres = { version = "0.7", optional = true }
redis = { version = "0.25", features = ["tokio-comp"], optional = true }

# HTTP Server and API
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }

# Metrics Export
prometheus = { version = "0.13", features = ["process"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "cargo", "env"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"
humantime-serde = "1.1"
byte-unit = "5.1"

# Threading and Concurrency
crossbeam = "0.8"
parking_lot = "0.12"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.10"

[features]
default = ["server", "databases"]
server = ["tokio", "axum", "tower-http", "prometheus"]
databases = ["mysql", "postgresql", "redis-db"]
mysql = ["mysql_async", "tokio"]
postgresql = ["tokio-postgres", "tokio"]
redis-db = ["redis", "tokio"]
gpu-nvidia = []
gpu-amd = []
docker = []
plugins = []

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[[bench]]
name = "collection_benchmark"
harness = false
